sm7250_common: disable qmipriod
Change-Id: Ife9f27c446bde26846ee97803355d07e5f484d01

--- a/prebuilt/system/etc/init/init.qcom.rc
+++ b/prebuilt/system/etc/init/init.qcom.rc
@@ -23,3 +23,8 @@ service vendor.mbm_spy /system/bin/true
     disabled
     oneshot
     override
+
+service vendor.qmipriod /system/bin/true
+    disabled
+    oneshot
+    override
